syntax = "proto3";

package protocols.parameters;

import "protocols/common/geometry.proto";

message Parameters {
  repeated Parameter parameters = 1;

  message Parameter {
    uint64 id = 1;
    string name = 2;
    string description = 3;

    oneof value {
      bool boolean = 4;
      int32 integer32 = 5;
      uint32 uinteger32 = 6;
      int64 integer64 = 7;
      uint64 uinteger64 = 8;
      float floating_point = 9;
      double double_floating_point = 10;
      string text = 11;
      common.Point2Df point2df = 12;
      common.Point3Df point3df = 13;
    }
  }
}
